# chriswachira.com

./: .gitmodules  LICENSE  README.md  config.yaml  infrastructure.py  pyproject.toml
.github/workflows/: hugo-deploy.yaml  terraform.yaml
content/blogs/: docker-container-exit-code-zero-with-oom-error.md
layouts/: index.html
layouts/partials/sections/: tech-stack.html
layouts/partials/sections/footer/: copyright.html
terraform/: aws-acm.tf  aws-cloudfront.tf  aws-route53.tf  aws-s3.tf  main.tf
