[tool.poetry]
name = "chriswachira-com"
version = "0.1.0"
description = ""
authors = ["Chris Wachira <chriskane816@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chriswachira"}]

[tool.poetry.dependencies]
python = "^3.11"
diagrams = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
